--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,7 @@
     "    for new_employee in new_employees:\n",
     "        welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
-    "    return welcome_messages"
+    "    retrn welcome_messages"
    ]
   },
   {
