--- a/index.ipynb
+++ b/index.ipynb
@@ -139,9 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-95178bd89522>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-95178bd89522>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    retrn welcome_messages\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def greet_employees():\n",
     "    welcome_messages = []\n",
