--- a/index.ipynb
+++ b/index.ipynb
@@ -104,18 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"Hi Jim, I'm so glad to be working with you!\",\n",
-       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
-       " \"Hi Lisa, I'm so glad to be working with you!\"]"
+       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
+       " \"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Meryl, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,15 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-95178bd89522>, line 6)",
+     "evalue": "invalid syntax (<ipython-input-11-95178bd89522>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-95178bd89522>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    retrn welcome_messages\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-95178bd89522>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    retrn welcome_messages\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
