automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -139,21 +139,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-95178bd89522>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-95178bd89522>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    retrn welcome_messages\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def greet_employees():\n",
     "    welcome_messages = []\n",
     "    for new_employee in new_employees:\n",
     "        welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
-    "    return welcome_messages"
+    "    retrn welcome_messages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -166,7 +175,7 @@
        " \"Hi Meryl, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
